--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="app">
 
   <head>
-    <!--<base href="/">-->
+    <base href="/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -25,7 +25,6 @@
     <script type="text/javascript" src="node_modules/@uirouter/angularjs/release/angular-ui-router.js"></script>
 
     <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/app.run.js"></script>
     <script type="text/javascript" src="js/service.app.js"></script>
 
   </head>
