--- a/public/index.html
+++ b/public/index.html
@@ -175,11 +175,8 @@
     <!-- Bootstrap core JavaScript -->
 
 
-    <script type="text/javascript" src="node_modules/angular/angular.js"></script>
-    <script type="text/javascript" src="node_modules/@uirouter/angularjs/release/angular-ui-router.js"></script>
-
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/service.app.js"></script>
+    <script src="node_modules/angular/angular.js"></script>
+    <script src="node_modules/@uirouter/angularjs/release/angular-ui-router.js"></script>
 
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -189,6 +186,9 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/grayscale.js"></script>
+
+    <script src="js/app.js"></script>
+    <script src="js/service.app.js"></script>
 
   </body>
 
