updating to reflect hour

--- a/public/index.html
+++ b/public/index.html
@@ -82,8 +82,8 @@
                 <ul>
                   <li>Send the at minimum entry fee to the game contract address to join</li>
                   <li>If you send additional funds, it will be added to your balance and automatically applied to the next round</li>
-                  <li>Every 2 hours, 10% of the current players will be infected (minimum 1 player infected)</li>
-                  <li>Infected players will have the next 2 hours to pay a cure fee (which grants immunity for an additional 2 hours)</li>
+                  <li>Every hour, 10% of the current players will be infected (minimum 1 player infected)</li>
+                  <li>Infected players will have the next hour to pay a cure fee (which grants immunity for an additional 2 hours)</li>
                   <li>If players forget or choose not to cure themselves, then they die and are eliminated from the current round</li>
                   <li>Every 24 hours, the game is settled.  The remaining living players, split the round balance as a prize for staying alive</li>
                   <li>The next round automatically starts automatically, if you have a balance greater than the entry fee you will automatically be revived and entered into the next round, other wise you will remain dead</li>
